[gd_scene load_steps=53 format=3 uid="uid://32gl4r1eefhu"]

[ext_resource type="Script" uid="uid://stmokg8b8ysy" path="res://entities/player/player.gd" id="1_b2kln"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="1_dqkch"]
[ext_resource type="Resource" uid="uid://euybd2w0bax" path="res://addons/phantom_camera/examples/resources/tween/player_phantom_camera_2d_tween.tres" id="2_qlg0r"]
[ext_resource type="Resource" uid="uid://csbmlpvj6i1xv" path="res://components/guide/contexts/keyboard_and_mouse/move.tres" id="2_we0b7"]
[ext_resource type="Resource" uid="uid://cqfhkkleeethw" path="res://components/guide/contexts/keyboard_and_mouse/capture.tres" id="3_fulsm"]
[ext_resource type="Resource" uid="uid://uh2ntr56dhi6" path="res://components/guide/contexts/keyboard_and_mouse/shoot.tres" id="4_bwdx1"]
[ext_resource type="Resource" uid="uid://rq5l617al3nd" path="res://components/guide/contexts/keyboard_and_mouse/target.tres" id="5_g3pa7"]
[ext_resource type="Resource" uid="uid://dcb76koaxrao0" path="res://components/guide/modifiers/relative_to_player.tres" id="6_g3pa7"]
[ext_resource type="Script" uid="uid://bmucxhobuv3i" path="res://addons/godot_state_charts/state_chart.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://jdqq8gw24d5i" path="res://addons/godot_state_charts/compound_state.gd" id="7_smehm"]
[ext_resource type="Script" uid="uid://dcu2i8t8kecjt" path="res://addons/godot_state_charts/atomic_state.gd" id="8_ur7pv"]
[ext_resource type="Script" uid="uid://btbuih6emodp4" path="res://addons/godot_state_charts/transition.gd" id="9_ur7pv"]
[ext_resource type="Script" uid="uid://ckolnjvgnona7" path="res://addons/godot_state_charts/parallel_state.gd" id="10_oprun"]
[ext_resource type="AudioStream" uid="uid://bfdnyqiookejj" path="res://assets/sounds/laser3.ogg" id="16_vewsg"]
[ext_resource type="AudioStream" uid="uid://pfjv31c71468" path="res://assets/sounds/zapThreeToneUp_short.ogg" id="18_geky7"]
[ext_resource type="AudioStream" uid="uid://yv26nt7ccgbi" path="res://assets/sounds/radar3_loop.ogg" id="19_eyb6c"]
[ext_resource type="Script" uid="uid://87on3p4ch1e7" path="res://components/capture_component.gd" id="19_np63p"]
[ext_resource type="AudioStream" uid="uid://cjfcpyjhk1k55" path="res://assets/sounds/f_laser.ogg" id="19_r633c"]
[ext_resource type="AudioStream" uid="uid://d1157syoti6fr" path="res://assets/sounds/radar3_stop.ogg" id="20_221hk"]
[ext_resource type="AudioStream" uid="uid://bwflp4ff00aj5" path="res://assets/sounds/lowRandom_norm.ogg" id="20_r633c"]
[ext_resource type="Script" uid="uid://b5nb2hl1km8hv" path="res://components/shoot_component.gd" id="21_0eo6o"]
[ext_resource type="AudioStream" uid="uid://dxv3nbr1m4mvn" path="res://assets/sounds/f_capture.ogg" id="21_2h0qb"]
[ext_resource type="Script" uid="uid://csga2ypo703ny" path="res://components/hitbox_component.gd" id="21_221hk"]
[ext_resource type="AudioStream" uid="uid://54en283p3oav" path="res://assets/sounds/f_up.ogg" id="21_pacje"]
[ext_resource type="Script" uid="uid://cvldao1arx3t3" path="res://components/target_component.gd" id="22_8q4fm"]
[ext_resource type="AudioStream" uid="uid://dmlmgtwn68mgj" path="res://assets/sounds/f_size.ogg" id="22_g3pa7"]
[ext_resource type="Script" uid="uid://bdy33sbgoncok" path="res://components/hurtbox_component.gd" id="22_ghoj8"]
[ext_resource type="AudioStream" uid="uid://c3308a737v5y6" path="res://assets/sounds/f_max.ogg" id="22_pacje"]
[ext_resource type="Script" uid="uid://bmq4ev24n01ct" path="res://components/stats_component.gd" id="23_ghoj8"]
[ext_resource type="Texture2D" uid="uid://wkbi3ujndd0h" path="res://assets/sprites/gun.png" id="25_2h0qb"]
[ext_resource type="PackedScene" uid="uid://bidbk0x0dtdko" path="res://entities/projectile/triangle_projectile.tscn" id="25_c112w"]
[ext_resource type="Script" uid="uid://dsy5yj0hshq3h" path="res://components/spawner_component.gd" id="25_qpopc"]
[ext_resource type="PackedScene" uid="uid://dtq5lq22d46rs" path="res://effects/explosion_effect.tscn" id="26_wq0jh"]
[ext_resource type="Material" uid="uid://ear8ugx7i76w" path="res://effects/white_flash_material.tres" id="28_gt4e4"]
[ext_resource type="Script" uid="uid://k2h0r714n0mp" path="res://components/hurt_component.gd" id="29_gt4e4"]
[ext_resource type="Script" uid="uid://dp65ygycaj2yt" path="res://components/collector_component.gd" id="31_2h0qb"]
[ext_resource type="Script" uid="uid://b7j10vaug8pfh" path="res://components/multi_flash_component.gd" id="33_c112w"]
[ext_resource type="PackedScene" uid="uid://dgvae28w5k7of" path="res://components/health_bar.tscn" id="35_mmk7k"]
[ext_resource type="Script" uid="uid://csqkc8o4iruir" path="res://components/power_up_component.gd" id="36_wy7bt"]
[ext_resource type="Texture2D" uid="uid://bujfi7tj4s750" path="res://assets/sprites/capture_cooldown_overlay.png" id="46_7otdo"]
[ext_resource type="PackedScene" uid="uid://bvai45nqhvdy2" path="res://entities/player/forms/triangle/triangle_form.tscn" id="46_c112w"]
[ext_resource type="Script" uid="uid://dh4dy7qlv108s" path="res://components/free_move_component.gd" id="46_g3pa7"]
[ext_resource type="Script" uid="uid://dtm1utyalev4f" path="res://entities/player/capture_cooldown_indicator.gd" id="47_7otdo"]
[ext_resource type="PackedScene" uid="uid://cispds3s1m8ar" path="res://entities/player/forms/sphere.tscn" id="47_rtlkk"]
[ext_resource type="Texture2D" uid="uid://brnjy7yuxhysk" path="res://assets/sprites/triangle_projectile.png" id="47_ssgi7"]
[ext_resource type="Material" uid="uid://3wiub50ispue" path="res://entities/player/forms/sphere_particles.tres" id="48_rtlkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h0qb"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_t1t22"]
radius = 12.0

[sub_resource type="Animation" id="Animation_ttr27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/TargetComponent:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0eo6o"]
resource_name = "color_pulse"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/TargetComponent:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.125, 0.0624999, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2h0qb"]
resource_name = "shoot_target_flash_red"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/TargetComponent:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13wue"]
_data = {
&"RESET": SubResource("Animation_ttr27"),
&"capture_target_modulate_pulse": SubResource("Animation_0eo6o"),
&"shoot_target_flash_red": SubResource("Animation_2h0qb")
}

[node name="Player" type="CharacterBody2D" groups=["players"]]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_b2kln")
capture_action = ExtResource("3_fulsm")
move_action = ExtResource("2_we0b7")
shoot_action = ExtResource("4_bwdx1")
target_action = ExtResource("5_g3pa7")
relative_to_player = ExtResource("6_g3pa7")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_2h0qb")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_tuyoq")
metadata/_custom_type_script = "uid://bmucxhobuv3i"

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("10_oprun")
metadata/_custom_type_script = "uid://ckolnjvgnona7"

[node name="Move" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_smehm")
initial_state = NodePath("NotMoving")
metadata/_custom_type_script = "uid://jdqq8gw24d5i"

[node name="NotMoving" type="Node" parent="StateChart/ParallelState/Move"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnPreventMove" type="Node" parent="StateChart/ParallelState/Move/NotMoving"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CannotMove")
event = &"prevent_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="OnMove" type="Node" parent="StateChart/ParallelState/Move/NotMoving"]
script = ExtResource("9_ur7pv")
to = NodePath("../../Moving")
event = &"move"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/ParallelState/Move"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnStopMove" type="Node" parent="StateChart/ParallelState/Move/Moving"]
script = ExtResource("9_ur7pv")
to = NodePath("../../NotMoving")
event = &"stop_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="OnPreventMove" type="Node" parent="StateChart/ParallelState/Move/Moving"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CannotMove")
event = &"prevent_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="CannotMove" type="Node" parent="StateChart/ParallelState/Move"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnAllowMove" type="Node" parent="StateChart/ParallelState/Move/CannotMove"]
script = ExtResource("9_ur7pv")
to = NodePath("../../NotMoving")
event = &"allow_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="Capture" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_smehm")
initial_state = NodePath("CanCapture")
metadata/_custom_type_script = "uid://jdqq8gw24d5i"

[node name="CanCapture" type="Node" parent="StateChart/ParallelState/Capture"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnCapture" type="Node" parent="StateChart/ParallelState/Capture/CanCapture"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CaptureCooldown")
event = &"capture"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="CaptureCooldown" type="Node" parent="StateChart/ParallelState/Capture"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="ToCanCapture" type="Node" parent="StateChart/ParallelState/Capture/CaptureCooldown"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CanCapture")
event = &"allow_capture"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="CaptureOld" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_smehm")
initial_state = NodePath("CanCapture")
metadata/_custom_type_script = "uid://jdqq8gw24d5i"

[node name="CanCapture" type="Node" parent="StateChart/ParallelState/CaptureOld"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnCapture" type="Node" parent="StateChart/ParallelState/CaptureOld/CanCapture"]
script = ExtResource("9_ur7pv")
to = NodePath("../../Capturing")
event = &"capture"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="Capturing" type="Node" parent="StateChart/ParallelState/CaptureOld"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnStopCapture" type="Node" parent="StateChart/ParallelState/CaptureOld/Capturing"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CanCapture")
event = &"stop_capture"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="OnFinishedCapture" type="Node" parent="StateChart/ParallelState/CaptureOld/Capturing"]
script = ExtResource("9_ur7pv")
to = NodePath("../../SuccessfulCapture")
event = &"finished_capture"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="SuccessfulCapture" type="Node" parent="StateChart/ParallelState/CaptureOld"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="ToCanCapture" type="Node" parent="StateChart/ParallelState/CaptureOld/SuccessfulCapture"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CanCapture")
delay_in_seconds = "0.5"

[node name="Shoot" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_smehm")
initial_state = NodePath("CanShoot")
metadata/_custom_type_script = "uid://jdqq8gw24d5i"

[node name="CanShoot" type="Node" parent="StateChart/ParallelState/Shoot"]
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnShoot" type="Node" parent="StateChart/ParallelState/Shoot/CanShoot"]
script = ExtResource("9_ur7pv")
to = NodePath("../../Cooldown")
event = &"shoot"
delay_in_seconds = "0.0"

[node name="Cooldown" type="Node" parent="StateChart/ParallelState/Shoot"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="ToCanShoot" type="Node" parent="StateChart/ParallelState/Shoot/Cooldown"]
unique_name_in_owner = true
script = ExtResource("9_ur7pv")
to = NodePath("../../CanShoot")
delay_in_seconds = "1.0"

[node name="Target" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("7_smehm")
initial_state = NodePath("CanMoveTarget")
metadata/_custom_type_script = "uid://jdqq8gw24d5i"

[node name="CanMoveTarget" type="Node" parent="StateChart/ParallelState/Target"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnPreventTargetMove" type="Node" parent="StateChart/ParallelState/Target/CanMoveTarget"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CannotMoveTarget")
event = &"prevent_target_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="CannotMoveTarget" type="Node" parent="StateChart/ParallelState/Target"]
unique_name_in_owner = true
script = ExtResource("8_ur7pv")
metadata/_custom_type_script = "uid://dcu2i8t8kecjt"

[node name="OnAllowTargetMove" type="Node" parent="StateChart/ParallelState/Target/CannotMoveTarget"]
script = ExtResource("9_ur7pv")
to = NodePath("../../CanMoveTarget")
event = &"allow_target_move"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://btbuih6emodp4"

[node name="Sounds" type="Node" parent="."]

[node name="MovingSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("19_eyb6c")
volume_db = -12.0

[node name="StopMovingSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("20_221hk")
volume_db = -12.0

[node name="ShootSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_vewsg")
volume_db = 12.0

[node name="Capturing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("20_r633c")
volume_db = -6.0
parameters/looping = true

[node name="FinishedCapturing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18_geky7")
volume_db = -4.0

[node name="Laser" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("19_r633c")

[node name="Capture" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("21_2h0qb")

[node name="Up" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("21_pacje")

[node name="Max" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("22_pacje")

[node name="Size" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("22_g3pa7")

[node name="CaptureCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="CaptureComponent" type="Node" parent="." node_paths=PackedStringArray("state_chart", "actor", "finished_capturing_sound")]
unique_name_in_owner = true
script = ExtResource("19_np63p")
state_chart = NodePath("../StateChart")
actor = NodePath("..")
finished_capturing_sound = NodePath("../Sounds/FinishedCapturing")
metadata/_custom_type_script = "uid://87on3p4ch1e7"

[node name="ShootComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor", "state_chart", "target_component", "shoot_sound", "stats_component")]
unique_name_in_owner = true
script = ExtResource("21_0eo6o")
gun_texture = ExtResource("25_2h0qb")
actor = NodePath("..")
state_chart = NodePath("../StateChart")
projectile_scene = ExtResource("25_c112w")
target_component = NodePath("../Rig/TargetComponent")
shoot_sound = NodePath("../Sounds/ShootSound")
stats_component = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://b5nb2hl1km8hv"

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
top_level = true
script = ExtResource("1_dqkch")
priority = 5
follow_mode = 2
follow_target = NodePath("..")
tween_resource = ExtResource("2_qlg0r")
tween_on_load = false
inactive_update_mode = 1
follow_damping = true
dead_zone_width = 0.25
dead_zone_height = 0.25
show_viewfinder_in_play = true
draw_limits = true
limit_left = -128
limit_top = -128
limit_right = 1152
limit_bottom = 1152
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="StatsComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("23_ghoj8")
actor = NodePath("..")
health = 3.0
metadata/_custom_type_script = "uid://bmq4ev24n01ct"

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("29_gt4e4")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../Rig/HurtboxComponent")
metadata/_custom_type_script = "uid://k2h0r714n0mp"

[node name="PowerUpComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("36_wy7bt")
actor = NodePath("..")
metadata/_custom_type_script = "uid://csqkc8o4iruir"

[node name="FreeMoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("46_g3pa7")
actor = NodePath("..")
max_speed = 80
acceleration = 8
friction = 16
metadata/_custom_type_script = "uid://dh4dy7qlv108s"

[node name="MultiFlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite_parent")]
unique_name_in_owner = true
script = ExtResource("33_c112w")
flash_material = ExtResource("28_gt4e4")
sprite_parent = NodePath("../Rig/TriangleForm")
metadata/_custom_type_script = "uid://b7j10vaug8pfh"

[node name="Rig" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="CollectorComponent" type="Area2D" parent="Rig"]
collision_layer = 0
collision_mask = 4
script = ExtResource("31_2h0qb")
metadata/_custom_type_script = "uid://dp65ygycaj2yt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rig/CollectorComponent"]
shape = SubResource("CircleShape2D_t1t22")

[node name="HealthBar" parent="Rig" node_paths=PackedStringArray("stats_component") instance=ExtResource("35_mmk7k")]
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 19.0
offset_right = 24.0
offset_bottom = 23.0
grow_horizontal = 2
stats_component = NodePath("../../StatsComponent")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="Rig"]
position = Vector2(0, 16)
script = ExtResource("25_qpopc")
scene = ExtResource("26_wq0jh")
metadata/_custom_type_script = "uid://dsy5yj0hshq3h"

[node name="TargetComponent" type="Sprite2D" parent="Rig"]
unique_name_in_owner = true
position = Vector2(24, 0)
region_rect = Rect2(85, 430, 32, 32)
script = ExtResource("22_8q4fm")
metadata/_custom_type_script = "uid://cvldao1arx3t3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rig/TargetComponent"]
unique_name_in_owner = true
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_13wue")
}

[node name="HitboxComponent" type="Area2D" parent="Rig"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
script = ExtResource("21_221hk")
metadata/_custom_type_script = "uid://csga2ypo703ny"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rig/HitboxComponent"]
polygon = PackedVector2Array(-17.2856, 9.76573, -0.0850105, -19.9368, 17.0317, 9.93354)

[node name="HurtboxComponent" type="Area2D" parent="Rig"]
unique_name_in_owner = true
position = Vector2(0, 9.53674e-07)
collision_mask = 0
script = ExtResource("22_ghoj8")
metadata/_custom_type_script = "uid://bdy33sbgoncok"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rig/HurtboxComponent"]
polygon = PackedVector2Array(-17.2856, 9.76573, -0.0850105, -19.9368, 17.0317, 9.93354)

[node name="Sphere" parent="Rig" instance=ExtResource("47_rtlkk")]
scale_factor = 15.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Rig"]
amount = 200
texture = ExtResource("47_ssgi7")
lifetime = 0.8
process_material = ExtResource("48_rtlkk")

[node name="TriangleForm" parent="Rig" node_paths=PackedStringArray("stats_component") instance=ExtResource("46_c112w")]
unique_name_in_owner = true
stats_component = NodePath("../../StatsComponent")

[node name="Triangle0" parent="Rig/TriangleForm" index="0"]
visible = false

[node name="Triangle1" parent="Rig/TriangleForm" index="1"]
visible = false

[node name="Triangle2" parent="Rig/TriangleForm" index="5"]
visible = false

[node name="Triangle3" parent="Rig/TriangleForm" index="9"]
visible = false

[node name="CaptureCooldownIndicator" type="TextureProgressBar" parent="Rig/TriangleForm"]
unique_name_in_owner = true
offset_left = -145.0
offset_top = -133.5
offset_right = 145.0
offset_bottom = 119.5
scale = Vector2(0.18, 0.18)
pivot_offset = Vector2(145, 126.5)
fill_mode = 2
texture_progress = ExtResource("46_7otdo")
tint_progress = Color(0.58, 0.58, 0.58, 0.627451)
script = ExtResource("47_7otdo")

[connection signal="state_exited" from="StateChart/ParallelState/Move/Moving" to="FreeMoveComponent" method="_on_moving_state_exited"]
[connection signal="state_processing" from="StateChart/ParallelState/Move/Moving" to="FreeMoveComponent" method="_on_moving_state_processing"]
[connection signal="state_processing" from="StateChart/ParallelState/Move/CannotMove" to="FreeMoveComponent" method="_on_cannot_move_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/CaptureOld/CanCapture" to="CaptureComponent" method="_on_can_capture_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/CaptureOld/Capturing" to="CaptureComponent" method="_on_capturing_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/CaptureOld/Capturing" to="CaptureComponent" method="_on_capturing_state_exited"]
[connection signal="state_processing" from="StateChart/ParallelState/CaptureOld/Capturing" to="CaptureComponent" method="_on_capturing_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/CaptureOld/SuccessfulCapture" to="CaptureComponent" method="_on_successful_capture_state_entered"]

[editable path="Rig/TriangleForm"]
